minor scrollbar fixes

--- a/src/styles.css
+++ b/src/styles.css
@@ -34,6 +34,8 @@
 	 * Note: Whenever chrome stops supporting custom scrollbars (the `::-webkit-scrollbar-*` selectors)
 	 * remove the following rule and all `::-webkit-scrollbar-*` selectors
 	 * */
+	html.windows:not(.firefox),
+	html.windows.dark:not(.firefox),
 	html.windows:not(.firefox) .custom-scrollbar,
 	html.windows.dark:not(.firefox) .custom-scrollbar {
 		scrollbar-color: initial;
@@ -63,7 +65,7 @@
 	html.windows .custom-scrollbar::-webkit-scrollbar-thumb:hover {
 		@apply bg-slate-600;
 	}
-	html.windows .dark .custom-scrollbar::-webkit-scrollbar-thumb:hover {
+	html.windows.dark .custom-scrollbar::-webkit-scrollbar-thumb:hover {
 		@apply bg-slate-200/70;
 	}
 
